environments/dev/kubernetes/services/pms/PMS-INGRESS-GLOBAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-ingress-global
  namespace: pms
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: kops.k8s.io/instancegroup=nodes
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=DEV,Name=PMS-Ingress-Global
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-55555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-dev-access-logs,access_logs.s3.prefix=pms,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: pms-email-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: email-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: pms-innsights-web-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: innsights-web-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: pms-messaging-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: messaging-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
